# bot-sylwek

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ref.env  setup.cfg
.github/workflows/: pipeline.yml  publish-docker.yml  test.yml
bot_sylwester/: __main__.py  client.py  server.py
test/: test_bot_sylwester.py
