[tool.poetry]
name = "bot_sylwester"
version = "0.1.0"
description = "Bot sylwester"
authors = ["gruszek, lamp"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"
python-dotenv = "^0.15.0"
yamllint = "^1.25.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"
pre-commit = "^2.7.1"
mypy = "^0.782"
isort = "^5.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = true
